metadata/force-app/main/default/objects/CustomName_DCqpO__c/CustomName_DCqpO__c.object-meta.xml
<CustomObject>
    <description>Description_eDGOr</description>
    <label>CustomLabel_OtiFr</label>
    <nameField>
        <label>CustomLabel_OtiFr</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_OtiFrs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>