metadata/force-app/main/default/objects/CustomName_DCqpO__c/fields/CustomField_TQyve__c.field-meta.xml
<CustomField>
    <fullName>CustomField_TQyve__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFielddOVOf</label>
    <length>255</length>
    <type>Text</type>
</CustomField>